--- a/_posts/2020-12-24-syllabus/syllabus.html
+++ b/_posts/2020-12-24-syllabus/syllabus.html
@@ -1473,7 +1473,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <li><a href="#week-04-0208---0212">Week 04, 02/08 - 02/12</a></li>
 <li><a href="#week-05-0215---0219">Week 05, 02/15 - 02/19</a></li>
 <li><a href="#week-06-0222---0226">Week 06, 02/22 - 02/26</a></li>
-<li><a href="#radvdatemon-7"><code>radvdate(mon, 7)</code></a></li>
+<li><a href="#week-07-0301---0305">Week 07, 03/01 - 03/05</a></li>
 <li><a href="#week-08-0308---0312">Week 08, 03/08 - 03/12</a></li>
 <li><a href="#week-09-0315---0319">Week 09, 03/15 - 03/19</a></li>
 <li><a href="#week-10-0322---0326">Week 10, 03/22 - 03/26</a></li>
@@ -1805,7 +1805,7 @@ I recognize that combining “human-centric” and “economic” together is no
 <p>Iyengar, S. S. and M. R. Lepper (2000). “When choice is demotivating: Can one desire too much of a good thing?” In: <em>Journal of personality and social psychology</em> 79.6, p. 995.</p>
 <p>Madrian, B. C. and D. F. Shea (2001). “The power of suggestion: Inertia in 401 (k) participation and savings behavior”. In: <em>The Quarterly journal of economics</em> 116.4, pp. 1149-1187.</p>
 </div>
-<h2 id="radvdatemon-7"><code>radvdate(mon, 7)</code></h2>
+<h2 id="week-07-0301---0305">Week 07, 03/01 - 03/05</h2>
 <h3 id="tues-march-2" class="heatinline">Tues March 2</h3>
 <h4 id="topic-digital-nudges">Topic: Digital Nudges</h4>
 <p>📖 nudge (ch 3,5)</p>
