--- a/_posts/2020-12-24-syllabus/syllabus.html
+++ b/_posts/2020-12-24-syllabus/syllabus.html
@@ -1506,8 +1506,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <td>Amit Gandhi (<a href="mailto:akgandhi@upenn.edu" class="email">akgandhi@upenn.edu</a>)</td>
 </tr>
 <tr class="odd">
-<td><font color = "red"> TA</td>
-<td>etc</td>
+<td><font color = "red"> Nawaaz Khalfan</td>
+<td>(<a href="mailto:khalfan@sas.upenn.edu" class="email">khalfan@sas.upenn.edu</a>)</td>
 </tr>
 <tr class="even">
 <td><font color = "red"> Lecture </font></td>
@@ -1519,7 +1519,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="even">
 <td><font color = "red"> Website </font></td>
-<td><a href="marketdesign.io">marketdesign.io</a></td>
+<td><a href="econ62.com">econ262.com</a></td>
 </tr>
 </tbody>
 </table>
